--- a/Hide My Window/Hide My Window.csproj
+++ b/Hide My Window/Hide My Window.csproj
@@ -14,18 +14,38 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <TargetCulture>en</TargetCulture>
+    <ProductName>Hide My Window</ProductName>
+    <PublisherName>theDiary Software</PublisherName>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <CreateDesktopShortcut>true</CreateDesktopShortcut>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <DocumentationFile>bin\Debug\Hide My Window.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,7 +60,17 @@
     <StartupObject>theDiary.Tools.HideMyWindow.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>application.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>Internet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -73,6 +103,9 @@
     </Compile>
     <Compile Include="Graphics\Graphics.Extensions.cs" />
     <Compile Include="Graphics\OverlayPosition.cs" />
+    <Compile Include="IconEventArgs.cs" />
+    <Compile Include="MessageBoxEventArgs.cs" />
+    <Compile Include="Settings.Appearance.cs" />
     <Compile Include="Settings.FormState.cs" />
     <Compile Include="Forms\AboutBox.cs">
       <SubType>Form</SubType>
@@ -114,11 +147,12 @@
     </Compile>
     <Compile Include="Settings.Password.cs" />
     <Compile Include="Windows\WindowCommand.cs" />
+    <Compile Include="Windows\WindowEventArgs.cs" />
     <Compile Include="Windows\WindowInfo.cs" />
     <Compile Include="Windows\WindowInfoEventArgs.cs" />
     <Compile Include="Windows\WindowState.cs" />
     <EmbeddedResource Include="ActionResource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ActionResource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AboutBox.resx">
@@ -143,6 +177,7 @@
     <EmbeddedResource Include="Forms\UnlockForm.resx">
       <DependentUpon>UnlockForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -157,29 +192,44 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\application.ico" />
-    <EmbeddedResource Include="Resources\Gears.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\lock.ico" />
-    <EmbeddedResource Include="Resources\unlock.ico" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="application.ico" />
-    <Content Include="Resources\Images\tack-small.png" />
-    <Content Include="Resources\Images\tack.png" />
-    <None Include="Resources\Images\configure_small.png" />
-    <None Include="Resources\Images\configure.png" />
-    <None Include="Resources\Images\hide-small.png" />
-    <None Include="Resources\Images\hide.png" />
-    <None Include="Resources\Images\lock-small.png" />
-    <None Include="Resources\Images\lock.png" />
-    <None Include="Resources\Images\rename-small.png" />
-    <None Include="Resources\Images\rename.png" />
-    <None Include="Resources\Images\show-small.png" />
-    <None Include="Resources\Images\show.png" />
-    <None Include="Resources\Images\unlock-small.png" />
-    <None Include="Resources\Images\unlock.png" />
+    <EmbeddedResource Include="Resources\application.ico" />
+    <EmbeddedResource Include="Resources\unlock.ico" />
+    <EmbeddedResource Include="Resources\lock.ico" />
+    <None Include="Resources\configuration.ico" />
+    <None Include="Resources\unlock.png" />
+    <None Include="Resources\tack.png" />
+    <None Include="Resources\show.png" />
+    <None Include="Resources\rename.png" />
+    <None Include="Resources\lock.png" />
+    <None Include="Resources\hide.png" />
+    <None Include="Resources\exit.png" />
+    <None Include="Resources\configure.png" />
+    <None Include="Resources\unlock_small.png" />
+    <None Include="Resources\tack_small.png" />
+    <None Include="Resources\show_small.png" />
+    <None Include="Resources\rename_small.png" />
+    <None Include="Resources\lock_small.png" />
+    <None Include="Resources\hide_small.png" />
+    <None Include="Resources\exit_small.png" />
+    <None Include="Resources\configure_small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.4.5">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 4.5</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
