Updates, bug fixes, cleaner UI and tooltips (in progress)

--- a/Hide My Window/Hide My Window.csproj
+++ b/Hide My Window/Hide My Window.csproj
@@ -46,6 +46,7 @@
     <Prefer32Bit>false</Prefer32Bit>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     <DocumentationFile>bin\Debug\Hide My Window.XML</DocumentationFile>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,8 +61,7 @@
     <StartupObject>theDiary.Tools.HideMyWindow.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>Resources\application.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>Internet</TargetZone>
@@ -69,9 +69,7 @@
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -91,6 +89,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ActionResource.resx</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Color_glowColor.cs" />
+    <Compile Include="Controls\GlowGroupBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Controls\GlowPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Extensions.cs" />
     <Compile Include="Forms\HiddenWindowsListView.cs">
       <SubType>Component</SubType>
@@ -105,6 +110,7 @@
     <Compile Include="Graphics\OverlayPosition.cs" />
     <Compile Include="IconEventArgs.cs" />
     <Compile Include="MessageBoxEventArgs.cs" />
+    <Compile Include="MessageBoxEventArgs.Delegates.cs" />
     <Compile Include="Settings.Appearance.cs" />
     <Compile Include="Settings.FormState.cs" />
     <Compile Include="Forms\AboutBox.cs">
