--- a/Hide My Window/Hide My Window.csproj
+++ b/Hide My Window/Hide My Window.csproj
@@ -71,11 +71,20 @@
   </PropertyGroup>
   <PropertyGroup />
   <ItemGroup>
+    <Reference Include="Octokit, Version=0.16.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Octokit.0.16.0\lib\net45\Octokit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationClient" />
+    <Reference Include="UIAutomationClientsideProviders" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="UIAutomationTypes" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionResource.Designer.cs">
@@ -97,6 +106,7 @@
     </Compile>
     <Compile Include="Extensions.cs" />
     <Compile Include="Extensions.Text.cs" />
+    <Compile Include="FileStorage\IIsolatedStorageFile.Extensions.cs" />
     <Compile Include="Forms\HiddenWindowsListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -109,6 +119,7 @@
     <Compile Include="Graphics\Graphics.Extensions.cs" />
     <Compile Include="Graphics\OverlayPosition.cs" />
     <Compile Include="IconEventArgs.cs" />
+    <Compile Include="FileStorage\IIsolatedStorageFile.cs" />
     <Compile Include="MessageBoxEventArgs.cs" />
     <Compile Include="MessageBoxEventArgs.Delegates.cs" />
     <Compile Include="Forms\AboutBox.cs">
@@ -137,6 +148,8 @@
     <Compile Include="HotKeys\HotKey.cs" />
     <Compile Include="HotKeys\HotkeyFunction.cs" />
     <Compile Include="HotKeys\HotModifierKeys.cs" />
+    <Compile Include="Notification.Delegates.cs" />
+    <Compile Include="Notification.EventArgs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.instance.cs" />
@@ -153,6 +166,7 @@
     <Compile Include="FileStorage\Settings.cs" />
     <Compile Include="FileStorage\Settings.FormState.cs" />
     <Compile Include="FileStorage\Settings.Password.cs" />
+    <Compile Include="Updater\Updater.cs" />
     <Compile Include="Windows\WindowCommand.cs" />
     <Compile Include="Windows\WindowEventArgs.cs" />
     <Compile Include="Windows\WindowInfo.cs" />
@@ -187,6 +201,7 @@
     <EmbeddedResource Include="Forms\UnlockForm.resx">
       <DependentUpon>UnlockForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -241,7 +256,9 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Watcher\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
