--- a/Hide My Window/Hide My Window.csproj
+++ b/Hide My Window/Hide My Window.csproj
@@ -77,6 +77,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
@@ -111,6 +112,19 @@
     <Compile Include="ExternalReferences\WindowPlacementFlags.cs" />
     <Compile Include="FileStorage\IIsolatedStorageFile.Extensions.cs" />
     <Compile Include="FileStorage\WindowsStoreItem.cs" />
+    <Compile Include="Forms\ConfigurationSections\GeneralConfiguration.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\ConfigurationSections\GeneralConfiguration.Designer.cs">
+      <DependentUpon>GeneralConfiguration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ConfigurationSections\IConfigurationSection.cs" />
+    <Compile Include="Forms\ConfigurationSections\PinnedWindowConfiguration.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\ConfigurationSections\PinnedWindowConfiguration.Designer.cs">
+      <DependentUpon>PinnedWindowConfiguration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\HiddenWindowsListView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -121,7 +135,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Graphics\Graphics.Extensions.cs" />
-    <Compile Include="Graphics\OverlayPosition.cs" />
+    <Compile Include="Graphics\ImageOverlayPosition.cs" />
     <Compile Include="IconEventArgs.cs" />
     <Compile Include="FileStorage\IIsolatedStorageFile.cs" />
     <Compile Include="MessageBoxEventArgs.cs" />
@@ -191,6 +205,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigurationForm.resx">
       <DependentUpon>ConfigurationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ConfigurationSections\GeneralConfiguration.resx">
+      <DependentUpon>GeneralConfiguration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ConfigurationSections\PinnedWindowConfiguration.resx">
+      <DependentUpon>PinnedWindowConfiguration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
