Removed Octokit for the moment numerous fixes

--- a/Hide My Window/Properties/Settings.settings
+++ b/Hide My Window/Properties/Settings.settings
@@ -1,8 +1,8 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
 
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
+<SettingsStoreFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/SettingsStore" CurrentProfile="(Default)">
     <Profiles>
         <Profile Name="(Default)" />
     </Profiles>
-    <Settings />
-</SettingsFile>
+    <SettingsStore />
+</SettingsStoreFile>
