--- a/Hide My Window/Hide My Window.csproj
+++ b/Hide My Window/Hide My Window.csproj
@@ -229,8 +229,8 @@
     <Compile Include="NotificationType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime.instance.cs" />
-    <Compile Include="Runtime.singleton.cs" />
+    <Compile Include="Runtime.Instance.cs" />
+    <Compile Include="Runtime.Singleton.cs" />
     <Compile Include="Forms\UnlockForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -243,6 +243,7 @@
     <Compile Include="FileStorage\SettingsStore.cs" />
     <Compile Include="FileStorage\Settings.FormState.cs" />
     <Compile Include="FileStorage\Settings.Password.cs" />
+    <Compile Include="Windows\IWindowState.Delegates.cs" />
     <Compile Include="Windows\WindowInfoManager.cs" />
     <Compile Include="Windows\IWindowState.cs" />
     <Compile Include="Windows\WindowEventArgs.cs" />
@@ -250,6 +251,7 @@
     <Compile Include="Windows\WindowInfo.Delegates.cs" />
     <Compile Include="Windows\WindowInfo.EventArgs.cs" />
     <Compile Include="Windows\WindowInfo.Events.cs" />
+    <Compile Include="Windows\WindowStateEventArgs.cs" />
     <Compile Include="Windows\WindowStates.cs" />
     <EmbeddedResource Include="ActionResource.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
